--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/functions": "^4.1.11",
     "axios": "^1.10.0",
     "next": "15.4.1",
     "openai": "^5.9.1",
