--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@netlify/functions": "^4.1.11",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.6",
     "next": "15.4.1",
     "openai": "^5.9.1",
     "react": "19.1.0",
